--- a/publications.qmd
+++ b/publications.qmd
@@ -25,12 +25,12 @@ title: "Publications"
 16. Catalfamo CJ, Heslin KM, Shilen A, Khan SM, Hunsaker JR, **Austhof E**, et al. Design of the Arizona CoVHORT: A Population-Based COVID-19 Cohort. *Frontiers in Public Health*. 2021 Feb 10;9:21. <https://doi.org/10.3389/fpubh.2021.620060>
 17. **Austhof E**, Schaefer K, Faulkner J, Bach L, Riddle M, Pogreba-Brown L. Knowledge and practices of primary care physicians or general practitioners treating post-infectious irritable bowel syndrome. *BMC Gastroenterology*. 2020;20(1-6). <https://doi.org/10.1186/s12876-020-01305-z>
 18. Pogreba-Brown K, **Austhof E**, Okello A, Weiss J, Lira R, Ernst K. Public Perceptions of Non-Pharmaceutical Interventions for Influenza and Mosquito-borne Illnesses -- A Statewide Survey in Arizona. *Perspectives in Public Health*. 2020 Jul;140(4):214-21. <https://doi.org/10.1177/1757913919886605>
-19.  **Austhof E**, Berisha V, McMahan B, Owen G, Keith L, Roach M, Brown H. Participation and Engagement of Public Health Stakeholders in Climate and Health Adaptation. Atmosphere. 2020; 11(3):265. <https://doi.org/10.3390/atmos11030265>
+19. **Austhof E**, Berisha V, McMahan B, Owen G, Keith L, Roach M, Brown H. Participation and Engagement of Public Health Stakeholders in Climate and Health Adaptation. Atmosphere. 2020; 11(3):265. <https://doi.org/10.3390/atmos11030265>
 20. Pogreba-Brown K, **Austhof E**, Ellingson K. The Case-Case Study: An Underutilized Tool in Infection Prevention.*American Journal of Infection Prevention.* 2020;48(3). <https://doi.org/10.1016/j.ajic.2018.11.024>
 21. Pogreba-Brown K, **Austhof E,** Armstrong A, Schaefer K, Villa L, et al. Chronic gastrointestinal and joint-related Sequelae Associated with Common Foodborne Illnesses -- A Scoping Review. *Foodborne Pathogens and Disease.* 2019;17(2). <https://doi.org/10.1089/fpd.2019.2692>
-22. Ernst K, **Barrett E,** Hoswell E, Hayden M.Increasing women\'s engagement in vector control: a report from Accelerate to Equal project workshops. *BMC Malaria Journal.* 2019;17(1):326. <https://doi.org/10.1186/s12936-018-2477-0>
+22. Ernst K, **Barrett E,** Hoswell E, Hayden M.Increasing women's engagement in vector control: a report from Accelerate to Equal project workshops. *BMC Malaria Journal.* 2019;17(1):326. <https://doi.org/10.1186/s12936-018-2477-0>
 23. **Barrett E**, Carr D, Bell ML, Pogreba-Brown K.Post-infectious sequelae after Campylobacter enteric infection: a pilot study in Maricopa County, Arizona, USA. *Pilot and Feasibility Studies.* 2018;4(1):142. <https://doi.org/10.1186/s40814-018-0335-z>
-24. Pogreba-Brown K, O\'Connor P, Matthews J, **Barrett E**, Bell ML.Case-case analysis of Campylobacter and Salmonella -- using surveillance data for outbreak investigations and monitoring routine risk factors. *Epidemiology and Infection.* 2018;146(15):1916-1921. <https://doi.org/10.1017/S0950268818002200>
+24. Pogreba-Brown K, O'Connor P, Matthews J, **Barrett E**, Bell ML.Case-case analysis of Campylobacter and Salmonella -- using surveillance data for outbreak investigations and monitoring routine risk factors. *Epidemiology and Infection.* 2018;146(15):1916-1921. <https://doi.org/10.1017/S0950268818002200>
 25. Pogreba-Brown K, **Barrett E**. Campylobacter and Ethnicity -- A case-case analysis to determine differences in disease presentation and risk factors.*Foodborne Pathogens and Disease*. *2018;*15(5)277-284. <https://doi.org/10.1089/fpd.2017.2337>
 26. Hayden M, **Barrett E**, Bernard G, Toko EN, Agawo M, Okello AM, Gunn J, Ernst K. Barriers and opportunities to advancing women in leadership roles in vector control: perspectives from a stakeholder survey.*American Journal of Tropical Medicine and Hygiene.* 2018;98(5):1224-1227. <https://doi.org/10.4269/ajtmh.17-0693>
 27. **Barrett E**, Barnes S, Pogreba-Brown K**.** An Experiential Learning Exercise in food-borne illness outbreak investigations: bridging education and experience. *Pedagogy in Health Promotion.* 2018;4(1):43-51. <https://doi.org/10.1177/2373379917700440>
@@ -44,4 +44,4 @@ title: "Publications"
 
 3.  Morano LH, Jagger MA, **Barrett E**, Berisha V, Borjan M, Heitzinger K, Kumar R, Lane K, Lumia M, Menager H, Thie L. Syndromic Surveillance Climate and Health Guidance Document.A CSTE guidance document prepared by the CSTE Climate and Health Syndromic Surveillance Workgroup, CSTE Climate Change Subcommittee. 2017.
 
-4.  Roach M, **Barrett E**, Brown HE, Dufour B, Hondula DM, Putnam H, Sosa B. Arizona\'s Climate and Health Adaptation Plan. A report prepared for the CDC Climate-Ready States and Cities Initiative. 2017.
+4.  Roach M, **Barrett E**, Brown HE, Dufour B, Hondula DM, Putnam H, Sosa B. Arizona's Climate and Health Adaptation Plan. A report prepared for the CDC Climate-Ready States and Cities Initiative. 2017.
