--- a/teaching.qmd
+++ b/teaching.qmd
@@ -8,6 +8,18 @@ In my teaching, I value student learning and engagement through **skills-based l
 
 ![Facilitating a discussion around integrating women in vector control activities in Bali, Indonesia 2019](images/Teaching%20in%20Bali-01.jpg){fig-alt="Erika holding a poster board in a conference room while she facilitates a discussion around integrating women in vector control in Bali, Indonesia in 2019" fig-align="center"}
 
+## Courses Taught
+
+-   Fall 2024 - One Health Foundations, University of Arizona \[7 week course, asynchronous online\]
+
+-   Spring 2024 - Infectious Disease Epidemiology, One Health, University of Arizona \[Guest Lecturer\]
+
+-   Fall 2023 - Infectious Disease Epidemiology, University of the West Indies, Kingston, Jamiaca \[1 week intensive course, in-person\]
+
+-   Spring 2016-Fall 2020 - Student Aid for Field Epidemiology Response, University of Arizona \[Co-Instructor\]
+
+-   Spring 2016 - Basic Epidemiology, Arizona School of Acupuncture and Oriental Medicine
+
 ## Explore some of my teaching artifacts below!
 
 [**Observation Letter from my Colleague, Lindsay Hansen**](https://drive.google.com/open?id=1yN9P3pu4KJj497OLtOD-dYuBq5CXFslPtf0ixO5dFKU&authuser=0) This letter discusses my effectiveness after teaching about relational database designs to a cohort of graduate students.
