--- a/index.qmd
+++ b/index.qmd
@@ -18,18 +18,15 @@ Erika Austhof is currently an Assistant Research Professor at the University of 
 :::
 :::
 
-
-
-
 ::: columns
 ::: {.column width="30%"}
 ### **Erika Austhof**
+
 #### Assistant Research Professor
+
 ##### [University of Arizona](https://publichealth.arizona.edu/directory/erika-austhof)
-<br>
-[![](./images/scholar.png){width=15%}](https://scholar.google.com/citations?user=s8k_vCsAAAAJ&hl=en)
-[![](./images/github.png){width=15%}](https://github.com/austhofe)
-[![](./images/linkedin.png){width=15%}](https://www.linkedin.com/in/epierika/)
+
+<br> [![](./images/scholar.png){width="15%"}](https://scholar.google.com/citations?user=s8k_vCsAAAAJ&hl=en) [![](./images/github.png){width="15%"}](https://github.com/austhofe) [![](./images/linkedin.png){width="15%"}](https://www.linkedin.com/in/epierika/)
 :::
 
 ::: {.column width="5%"}
@@ -38,7 +35,9 @@ Erika Austhof is currently an Assistant Research Professor at the University of 
 
 ::: {.column width="30%"}
 ### Interests
+
 -   Epidemiology
+-   Infectious diseases
 -   Climate change & health
 -   Data science
 :::
@@ -49,8 +48,19 @@ Erika Austhof is currently an Assistant Research Professor at the University of 
 
 ::: {.column width="30%"}
 ### Education
+
 -   PhD Epidemiology, Minor in Management Information Systems, 2023
 -   MPH Epidemiology, 2015
 -   BS Microbiology, 2012
 :::
 :::
+
+::: {.column width="100%"}
+<br>
+:::
+
+<br>
+### **Current News**
+I was selected for the University of Arizona Health Sciences Career Development Award! This grant provides up to two years of funding to advance research. I am studying the role of weather in spatial-temportal clusters of *Salmonella* in Colorado. [UAHS wrote about the award here](https://healthsciences.arizona.edu/connect/honors/public-healths-austhof-receives-career-development-award)
+
+Environmental Health Perspectives wrote about my recently published paper in their [Science Selection](https://ehp.niehs.nih.gov/doi/10.1289/EHP16432). This news article covers differences in *Campylobacter* incidence in the Southwest following precipitation and drought events.
