--- a/publications.qmd
+++ b/publications.qmd
@@ -7,36 +7,43 @@ title: "Publications"
 
 **Refereed Journal Articles**
 
-1.  Armstrong A, Hoffmann S, Boyd K, **Austhof E**, McFadden S, Scahefer K, Pogreba-Brown K. Exposing vibriosis: a scoping review of the literature regarding sequelae of non-cholera Vibrio infection. Archives Clin Inf Dis. 2024;19(3):e138679. <https://doi.org/10.5812/archcid-138679>
-2.  **Austhof E**, Warner S, Helfrich K, Pogreba-Brown K, Brown HE, Klimentidis YC, et al. Exploring the association of weather variability on *Campylobacter* - A systematic review. Environ Res. 2024 Apr 4;252(Pt 1):118796. <https://doi.org/10.1016/j.envres.2024.118796>
-3.  Brown HE, **Austhof E**, Luz PM, Ferguson DB. Economics, health, or environment: What motivates individual climate action? PLOS Clim. 2023;2(8): e0000177. <https://doi.org/10.1371/journal.pclm.0000177>
-4.  Chambers S, Brown HE, Keith L, **Austhof E**. Development of a geographic human heat balance equation to support public health analyses: An Arizona urban sun corridor application. Remote Sensing App. 2023;32. <https://doi.org/10.1016/j.rsase.2023.101009>
-5.  Barraza L, **Austhof E**, Khan SM, Kelley CP, Shilen A, Ernst K, et al. Differences in Perceptions of Individual and Government-Level COVID-19 Prevention Measures Based on Vaccine Willingness. J Health Care L & Pol'y. 2023;26(87).
-6.  Jacobs ET, Catalfamo CJ, Colombo PM, Khan SM, **Austhof E**, Cordova-Marks F, et. al. Pre-existing conditions associated with post-acute sequelae of COVID-19. Journal of Autoimmunity. 2023 Jan 6:102991. <https://doi.org/10.1016/j.jaut.2022.102991>
-7.  Pogreba-Brown K, Boyd K, Schaefer K**, Austhof E**, Armstrong A, Owusu-Dommey A, et. al. Complications Associated with Foodborne Listeriosis: A Scoping Review. Foodborne Pathogens and Disease. 2022;19(11):725-743. [https://doi.org/10.1089/fpd.2022.0012](#0)
-8.  **Austhof E**, Brown HE. Global Warming's Six MTurks: A Secondary Analysis of a US-Based Online Crowdsourcing Market. Int J Environ Res Public Health. 2022 Jul 7;19(14):8320. <http://doi.org/10.3390/ijerph19148320>
-9.  **Austhof E**, Bell ML, Riddle MS, Catalfamo CL, McFadden C, Cooper K, Scallan E, Jacobs ET, Pogreba-Brown K. Persisting gastrointestinal symptoms and post-infectious irritable bowel syndrome following SARS-CoV-2 infection: results from the Arizona CoVHORT. Epidemiol Infect. 2022 Jul 8;150:e136. <http://doi.org/10.1017/S0950268822001200>
-10. Anderson EJ, Ernst K, Garcia DO, Lopez E, Pogreba Brown K, **Austhof E**, et al. Knowledge of Sexual Transmission of Zika Virus Among Women Who Are Pregnant or Intend to Become Pregnant, Arizona, 2017. *Public Health Reports*. 2021 Apr 2:333549211006986. <https://doi.org/10.1177/00333549211006986>
-11. Khan SM, Farland LV, Catalfamo CJ, **Austhof E**, Bell ML, Chen Z, et al. Elucidating symptoms of COVID-19 illness in the Arizona CoVHORT: a longitudinal cohort study. *BMJ Open*. 2022 Jan 1;12(1):e053403. <http://dx.doi.org/10.1136/bmjopen-2021-053403>
-12. Schaefer K, **Austhof E**, Boyd K, Armstrong A, Hoffman S, Pogreba-Brown K. Septicemia Due to Listeria monocytogenes Infection: A Systematic Review and Meta-Analysis. *Foodborne Pathogens and Disease*. 2021 Dec 9. <http://doi.org/10.1089/fpd.2021.0046>
-13. Keith L, Iroz-Elardo N, **Austhof E**, Sami I, Arora M. Extreme Heat at Outdoor COVID-19 Vaccination Sites. *The Journal of Climate Change and Health.* 2021. <https://doi.org/10.1016/j.joclim.2021.100043>
-14. **Austhof E**, Brown HE. Flexibility and partnerships perceived as supportive of dual hazard response: COVID-19 and Heat Related Illness, Summer 2020. *The Journal of Climate Change and Health*. 2021 Oct 1;4:100068. [https://doi.org/10.1016/j.joclim.2021.100068](#0)
-15. **Austhof E,** Boyd K, Schaefer K, McFadden C, Owusu-Dommey A, Hoffman S, et al. Scoping Review of Toxoplasma Postinfectious Sequelae. *Foodborne Pathogens and Disease*. 2021 Oct 1;18(10):687-701. [http://doi.org/10.1089/fpd.2021.0015](#0)
-16. Pogreba-Brown K, **Austhof E**, Tang X, Trejo MJ, Owusu-Dommey A, Boyd K, Armstrong A, Schaefer K, Bazaco MC, Batz M, Riddle M. Enteric Pathogens and Reactive Arthritis: Systematic Review and Meta-Analyses of Pathogen-Associated Reactive Arthritis. *Foodborne Pathogens and Disease*. 2021 Sep 1;18(9):627-39. <https://doi.org/10.1089/fpd.2020.2910>
-17. Pogreba-Brown K, **Austhof E,** Rosa-Hernandez A, McFadden C, Boyd K, Sharma J, et al. Training and Incorporating Students in SARS-CoV-2 Case Investigations and Contact Tracing. *Public Health Reports*. 2021 Mar;136(2):154-60. [https://doi.org/10.1177/0033354920974664](https://doi.org/10.1177%2F0033354920974664)
-18. Catalfamo CJ, Heslin KM, Shilen A, Khan SM, Hunsaker JR, **Austhof E**, et al. Design of the Arizona CoVHORT: A Population-Based COVID-19 Cohort. *Frontiers in Public Health*. 2021 Feb 10;9:21. <https://doi.org/10.3389/fpubh.2021.620060>
-19. **Austhof E**, Schaefer K, Faulkner J, Bach L, Riddle M, Pogreba-Brown L. Knowledge and practices of primary care physicians or general practitioners treating post-infectious irritable bowel syndrome. *BMC Gastroenterology*. 2020;20(1-6). <https://doi.org/10.1186/s12876-020-01305-z>
-20. Pogreba-Brown K, **Austhof E**, Okello A, Weiss J, Lira R, Ernst K. Public Perceptions of Non-Pharmaceutical Interventions for Influenza and Mosquito-borne Illnesses -- A Statewide Survey in Arizona. *Perspectives in Public Health*. 2020 Jul;140(4):214-21. <https://doi.org/10.1177/1757913919886605>
-21. **Austhof E**, Berisha V, McMahan B, Owen G, Keith L, Roach M, Brown H. Participation and Engagement of Public Health Stakeholders in Climate and Health Adaptation. Atmosphere. 2020; 11(3):265. <https://doi.org/10.3390/atmos11030265>
-22. Pogreba-Brown K, **Austhof E**, Ellingson K. The Case-Case Study: An Underutilized Tool in Infection Prevention.*American Journal of Infection Prevention.* 2020;48(3). <https://doi.org/10.1016/j.ajic.2018.11.024>
-23. Pogreba-Brown K, **Austhof E,** Armstrong A, Schaefer K, Villa L, et al. Chronic gastrointestinal and joint-related Sequelae Associated with Common Foodborne Illnesses -- A Scoping Review. *Foodborne Pathogens and Disease.* 2019;17(2). <https://doi.org/10.1089/fpd.2019.2692>
-24. Ernst K, **Barrett E,** Hoswell E, Hayden M.Increasing women's engagement in vector control: a report from Accelerate to Equal project workshops. *BMC Malaria Journal.* 2019;17(1):326. <https://doi.org/10.1186/s12936-018-2477-0>
-25. **Barrett E**, Carr D, Bell ML, Pogreba-Brown K.Post-infectious sequelae after Campylobacter enteric infection: a pilot study in Maricopa County, Arizona, USA. *Pilot and Feasibility Studies.* 2018;4(1):142. <https://doi.org/10.1186/s40814-018-0335-z>
-26. Pogreba-Brown K, O'Connor P, Matthews J, **Barrett E**, Bell ML.Case-case analysis of Campylobacter and Salmonella -- using surveillance data for outbreak investigations and monitoring routine risk factors. *Epidemiology and Infection.* 2018;146(15):1916-1921. <https://doi.org/10.1017/S0950268818002200>
-27. Pogreba-Brown K, **Barrett E**. Campylobacter and Ethnicity -- A case-case analysis to determine differences in disease presentation and risk factors.*Foodborne Pathogens and Disease*. *2018;*15(5)277-284. <https://doi.org/10.1089/fpd.2017.2337>
-28. Hayden M, **Barrett E**, Bernard G, Toko EN, Agawo M, Okello AM, Gunn J, Ernst K. Barriers and opportunities to advancing women in leadership roles in vector control: perspectives from a stakeholder survey.*American Journal of Tropical Medicine and Hygiene.* 2018;98(5):1224-1227. <https://doi.org/10.4269/ajtmh.17-0693>
-29. **Barrett E**, Barnes S, Pogreba-Brown K**.** An Experiential Learning Exercise in food-borne illness outbreak investigations: bridging education and experience. *Pedagogy in Health Promotion.* 2018;4(1):43-51. <https://doi.org/10.1177/2373379917700440>
-30. Oren E, Fiero MH, **Barrett E**, Anderson B, Nunez M, Gonzalez-Salazar. Detection of Latent Tuberculosis Infection among migrant farmworkers along the US-Mexico Border. *BMC Infectious Disease* 2017;16(1):630. <https://doi.org/10.1186/s12879-016-1959-3>
+\*denotes dissertation work; \*\* denotes student mentored; † denotes selection for a news
+story
+
+1.  Pogreba-Brown K, **Austhof E**, McFadden C, Scranton C, Sun X, Vujkovic-Cviji I, et al. Determining the incidence, risk factors and biological drivers of Irritable Bowel Syndrome (IBS) as part of the constellation of Post-Acute Sequelae of SARS-CoV-2 infection (PASC) outcomes in the Arizona CoVHORT-GI, a longitudinal cohort study. BMJ Open. 2025 Jan 10. <https://doi.org/10.1136/bmjopen-2024-095093>
+2.  \* **Austhof E**, Pogreba-Brown L, White AE, Jervis RH, Weiss J, Shrum Davis S, Brown HE. Association of precipitation events, drought, and animal operations on *Salmonella* infections in the Southwest US, 2009-2021. One Health. One Health. 2024 Nov 19;19:100941. <https://doi.org/10.1016/j.onehlt.2024.100941>
+3.   † Watkins L, Brown HE, Keith L, **Austhof E**, Lin Cox H, Chambers S, Tabor J, Gettel A, Guardaro M. A co-produced workflow for addressing inequities in cooling center access. Community Sci. 2024;3(4). <https://doi.org/10.1029/2023CSJ000038>
+4.  \*† **Austhof E**, Brown HE, White AE, Jervis RH, Weiss J, Shrum Davis S, Pogreba-Brown K. Association of precipitation events, drought, and animal operations on *Campylobacter* incidence in the Southwest US, 2009-2021. Environ Health Perspect. 2024 Sep;132(9):97010. <https://doi.org/10.1289/ehp14693>
+5.  Armstrong A, Hoffmann S, Boyd K, **Austhof E**, McFadden S, Scahefer K, Pogreba-Brown K. Exposing vibriosis: a scoping review of the literature regarding sequelae of non-cholera Vibrio infection. Archives Clin Inf Dis. 2024;19(3):e138679. <https://doi.org/10.5812/archcid-138679>
+6.  **\*Austhof E**, Warner S, Helfrich K, Pogreba-Brown K, Brown HE, Klimentidis YC, et al. Exploring the association of weather variability on *Campylobacter* - A systematic review. Environ Res. 2024 Apr 4;252(Pt 1):118796. <https://doi.org/10.1016/j.envres.2024.118796>
+7.  Brown HE, **Austhof E**, Luz PM, Ferguson DB. Economics, health, or environment: What motivates individual climate action? PLOS Clim. 2023;2(8): e0000177. <https://doi.org/10.1371/journal.pclm.0000177>
+8.  Chambers S, Brown HE, Keith L, **Austhof E**. Development of a geographic human heat balance equation to support public health analyses: An Arizona urban sun corridor application. Remote Sensing App. 2023;32. <https://doi.org/10.1016/j.rsase.2023.101009>
+9.  Barraza L, **Austhof E**, Khan SM, Kelley CP, Shilen A, Ernst K, et al. Differences in Perceptions of Individual and Government-Level COVID-19 Prevention Measures Based on Vaccine Willingness. J Health Care L & Pol'y. 2023;26(87).
+10. Jacobs ET, Catalfamo CJ, Colombo PM, Khan SM, **Austhof E**, Cordova-Marks F, et. al. Pre-existing conditions associated with post-acute sequelae of COVID-19. Journal of Autoimmunity. 2023 Jan 6:102991. <https://doi.org/10.1016/j.jaut.2022.102991>
+11. Pogreba-Brown K, Boyd K, Schaefer K**, Austhof E**, Armstrong A, Owusu-Dommey A, et. al. Complications Associated with Foodborne Listeriosis: A Scoping Review. Foodborne Pathogens and Disease. 2022;19(11):725-743. [https://doi.org/10.1089/fpd.2022.0012](#0)
+12. **Austhof E**, Brown HE. Global Warming's Six MTurks: A Secondary Analysis of a US-Based Online Crowdsourcing Market. Int J Environ Res Public Health. 2022 Jul 7;19(14):8320. <http://doi.org/10.3390/ijerph19148320>
+13. **Austhof E**, Bell ML, Riddle MS, Catalfamo CL, McFadden C, Cooper K, Scallan E, Jacobs ET, Pogreba-Brown K. Persisting gastrointestinal symptoms and post-infectious irritable bowel syndrome following SARS-CoV-2 infection: results from the Arizona CoVHORT. Epidemiol Infect. 2022 Jul 8;150:e136. <http://doi.org/10.1017/S0950268822001200>
+14. Anderson EJ, Ernst K, Garcia DO, Lopez E, Pogreba Brown K, **Austhof E**, et al. Knowledge of Sexual Transmission of Zika Virus Among Women Who Are Pregnant or Intend to Become Pregnant, Arizona, 2017. *Public Health Reports*. 2021 Apr 2:333549211006986. <https://doi.org/10.1177/00333549211006986>
+15. Khan SM, Farland LV, Catalfamo CJ, **Austhof E**, Bell ML, Chen Z, et al. Elucidating symptoms of COVID-19 illness in the Arizona CoVHORT: a longitudinal cohort study. *BMJ Open*. 2022 Jan 1;12(1):e053403. <http://dx.doi.org/10.1136/bmjopen-2021-053403>
+16. \*\*Schaefer K, **Austhof E**, Boyd K, Armstrong A, Hoffman S, Pogreba-Brown K. Septicemia Due to Listeria monocytogenes Infection: A Systematic Review and Meta-Analysis. *Foodborne Pathogens and Disease*. 2021 Dec 9. <http://doi.org/10.1089/fpd.2021.0046>
+17. Keith L, Iroz-Elardo N, **Austhof E**, Sami I, Arora M. Extreme Heat at Outdoor COVID-19 Vaccination Sites. *The Journal of Climate Change and Health.* 2021. <https://doi.org/10.1016/j.joclim.2021.100043>
+18. **Austhof E**, Brown HE. Flexibility and partnerships perceived as supportive of dual hazard response: COVID-19 and Heat Related Illness, Summer 2020. *The Journal of Climate Change and Health*. 2021 Oct 1;4:100068. [https://doi.org/10.1016/j.joclim.2021.100068](#0)
+19. **\*\*Austhof E,** Boyd K, Schaefer K, McFadden C, Owusu-Dommey A, Hoffman S, et al. Scoping Review of Toxoplasma Postinfectious Sequelae. *Foodborne Pathogens and Disease*. 2021 Oct 1;18(10):687-701. [http://doi.org/10.1089/fpd.2021.0015](#0)
+20. Pogreba-Brown K, **Austhof E**, Tang X, Trejo MJ, Owusu-Dommey A, Boyd K, Armstrong A, Schaefer K, Bazaco MC, Batz M, Riddle M. Enteric Pathogens and Reactive Arthritis: Systematic Review and Meta-Analyses of Pathogen-Associated Reactive Arthritis. *Foodborne Pathogens and Disease*. 2021 Sep 1;18(9):627-39. <https://doi.org/10.1089/fpd.2020.2910>
+21. Pogreba-Brown K, **Austhof E,** Rosa-Hernandez A, McFadden C, Boyd K, Sharma J, et al. Training and Incorporating Students in SARS-CoV-2 Case Investigations and Contact Tracing. *Public Health Reports*. 2021 Mar;136(2):154-60. [https://doi.org/10.1177/0033354920974664](https://doi.org/10.1177%2F0033354920974664)
+22. Catalfamo CJ, Heslin KM, Shilen A, Khan SM, Hunsaker JR, **Austhof E**, et al. Design of the Arizona CoVHORT: A Population-Based COVID-19 Cohort. *Frontiers in Public Health*. 2021 Feb 10;9:21. <https://doi.org/10.3389/fpubh.2021.620060>
+23. **Austhof E**, Schaefer K, Faulkner J, Bach L, Riddle M, Pogreba-Brown L. Knowledge and practices of primary care physicians or general practitioners treating post-infectious irritable bowel syndrome. *BMC Gastroenterology*. 2020;20(1-6). <https://doi.org/10.1186/s12876-020-01305-z>
+24. Pogreba-Brown K, **Austhof E**, Okello A, Weiss J, Lira R, Ernst K. Public Perceptions of Non-Pharmaceutical Interventions for Influenza and Mosquito-borne Illnesses -- A Statewide Survey in Arizona. *Perspectives in Public Health*. 2020 Jul;140(4):214-21. <https://doi.org/10.1177/1757913919886605>
+25. **Austhof E**, Berisha V, McMahan B, Owen G, Keith L, Roach M, Brown H. Participation and Engagement of Public Health Stakeholders in Climate and Health Adaptation. Atmosphere. 2020; 11(3):265. <https://doi.org/10.3390/atmos11030265>
+26. Pogreba-Brown K, **Austhof E**, Ellingson K. The Case-Case Study: An Underutilized Tool in Infection Prevention.*American Journal of Infection Prevention.* 2020;48(3). <https://doi.org/10.1016/j.ajic.2018.11.024>
+27. Pogreba-Brown K, **Austhof E,** Armstrong A, Schaefer K, Villa L, et al. Chronic gastrointestinal and joint-related Sequelae Associated with Common Foodborne Illnesses -- A Scoping Review. *Foodborne Pathogens and Disease.* 2019;17(2). <https://doi.org/10.1089/fpd.2019.2692>
+28. Ernst K, **Barrett E,** Hoswell E, Hayden M.Increasing women's engagement in vector control: a report from Accelerate to Equal project workshops. *BMC Malaria Journal.* 2019;17(1):326. <https://doi.org/10.1186/s12936-018-2477-0>
+29. **Barrett E**, Carr D, Bell ML, Pogreba-Brown K.Post-infectious sequelae after Campylobacter enteric infection: a pilot study in Maricopa County, Arizona, USA. *Pilot and Feasibility Studies.* 2018;4(1):142. <https://doi.org/10.1186/s40814-018-0335-z>
+30. Pogreba-Brown K, O'Connor P, Matthews J, **Barrett E**, Bell ML.Case-case analysis of Campylobacter and Salmonella -- using surveillance data for outbreak investigations and monitoring routine risk factors. *Epidemiology and Infection.* 2018;146(15):1916-1921. <https://doi.org/10.1017/S0950268818002200>
+31. Pogreba-Brown K, **Barrett E**. Campylobacter and Ethnicity -- A case-case analysis to determine differences in disease presentation and risk factors.*Foodborne Pathogens and Disease*. *2018;*15(5)277-284. <https://doi.org/10.1089/fpd.2017.2337>
+32. Hayden M, **Barrett E**, Bernard G, Toko EN, Agawo M, Okello AM, Gunn J, Ernst K. Barriers and opportunities to advancing women in leadership roles in vector control: perspectives from a stakeholder survey.*American Journal of Tropical Medicine and Hygiene.* 2018;98(5):1224-1227. <https://doi.org/10.4269/ajtmh.17-0693>
+33. **Barrett E**, Barnes S, Pogreba-Brown K**.** An Experiential Learning Exercise in food-borne illness outbreak investigations: bridging education and experience. *Pedagogy in Health Promotion.* 2018;4(1):43-51. <https://doi.org/10.1177/2373379917700440>
+34. Oren E, Fiero MH, **Barrett E**, Anderson B, Nunez M, Gonzalez-Salazar. Detection of Latent Tuberculosis Infection among migrant farmworkers along the US-Mexico Border. *BMC Infectious Disease* 2017;16(1):630. <https://doi.org/10.1186/s12879-016-1959-3>
 
 **White Papers**
 
