--- a/research.qmd
+++ b/research.qmd
@@ -8,13 +8,15 @@ My research focuses on the intersection of climate change and health. I focus on
 
 # Current Work
 
--   Exploring transmission of pathogens from cattle feedlots to adjacent lands
+-   Exploring transmission dynamics of *Salmonella* through shotgun metagenomics and whole genome sequencing (UAHS Careeer Development Award 2025-2027)
+
+-   Exploring transmission of pathogens from cattle feedlots to adjacent lands (Center for Produce Safety 2025-2027 grant)
 
 -   Gastrointestinal symptoms and health outcomes of COVID-19 (NIH NIDDK R01, co-I)
 
--   Cardiovascular health outcomes of wildfire (CLIMAS)
+-   Cardiovascular health outcomes of wildfire smoke exposure (CLIMAS NOAA RISA grant)
 
--   Supporting health departments respond to the health effects of climate change (BRACE, CDC)
+-   Technical assistance to health departments responding to the health effects of climate change (BRACE, CDC)
 
 ## Thinking about...
 
