--- a/teaching.qmd
+++ b/teaching.qmd
@@ -10,6 +10,8 @@ In my teaching, I value student learning and engagement through **skills-based l
 
 ## Courses Taught
 
+-   Spring 2025 - Basics of Epidemiology, University of Arizona \[15 weeks, online\]
+
 -   Fall 2024 - One Health Foundations, University of Arizona \[7 week course, asynchronous online\]
 
 -   Spring 2024 - Infectious Disease Epidemiology, One Health, University of Arizona \[Guest Lecturer\]
