Spring 2025 updates to pages

--- a/index.qmd
+++ b/index.qmd
@@ -60,7 +60,8 @@ Erika Austhof is currently an Assistant Research Professor at the University of 
 :::
 
 <br>
-### **Current News**
+**Current News**
+
 I was selected for the University of Arizona Health Sciences Career Development Award! This grant provides up to two years of funding to advance research. I am studying the role of weather in spatial-temportal clusters of *Salmonella* in Colorado. [UAHS wrote about the award here](https://healthsciences.arizona.edu/connect/honors/public-healths-austhof-receives-career-development-award)
 
 Environmental Health Perspectives wrote about my recently published paper in their [Science Selection](https://ehp.niehs.nih.gov/doi/10.1289/EHP16432). This news article covers differences in *Campylobacter* incidence in the Southwest following precipitation and drought events.
